Enhance index.html with header and product listings
Added a header and product section with items.

--- a/index.html
+++ b/index.html
@@ -2,18 +2,34 @@
 <html>
 <head>
   <title>My Electronic Store</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Welcome to My Electronic Store</h1>
-  <p>We sell quality electronic products online.</p>
 
-  <h2>Products</h2>
-  <ul>
-    <li>Smartphone</li>
-    <li>Laptop</li>
-    <li>Headphones</li>
-  </ul>
+<header>
+  <h1>My Electronic Store</h1>
+  <p>Best electronics at affordable prices</p>
+</header>
 
-  <p>Contact us: myemail@example.com</p>
+<section class="products">
+  <div class="product">
+    <h3>Smartphone</h3>
+    <p>$299</p>
+    <button>Buy Now</button>
+  </div>
+
+  <div class="product">
+    <h3>Laptop</h3>
+    <p>$799</p>
+    <button>Buy Now</button>
+  </div>
+
+  <div class="product">
+    <h3>Headphones</h3>
+    <p>$99</p>
+    <button>Buy Now</button>
+  </div>
+</section>
+
 </body>
 </html>
