Replace buttons with purchase links and add navigation
Updated product section to use links for purchasing instead of buttons and added navigation links.

--- a/index.html
+++ b/index.html
@@ -3,33 +3,50 @@
 <head>
   <title>My Electronic Store</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
 <header>
   <h1>My Electronic Store</h1>
-  <p>Best electronics at affordable prices</p>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#products">Products</a>
+    <a href="#contact">Contact</a>
+  </nav>
 </header>
 
-<section class="products">
+<section id="products" class="products">
+
   <div class="product">
+    <img src="images/phone.jpg">
     <h3>Smartphone</h3>
     <p>$299</p>
-    <button>Buy Now</button>
+    <a class="buy" href="https://wa.me/971XXXXXXXXX">Buy Now</a>
   </div>
 
   <div class="product">
+    <img src="images/laptop.jpg">
     <h3>Laptop</h3>
     <p>$799</p>
-    <button>Buy Now</button>
+    <a class="buy" href="https://wa.me/971XXXXXXXXX">Buy Now</a>
   </div>
 
   <div class="product">
+    <img src="images/headphones.jpg">
     <h3>Headphones</h3>
     <p>$99</p>
-    <button>Buy Now</button>
+    <a class="buy" href="https://wa.me/971XXXXXXXXX">Buy Now</a>
   </div>
+
 </section>
+
+<footer id="contact">
+  <p>Contact us on WhatsApp</p>
+</footer>
 
 </body>
 </html>
+
+
+
