--- a/index.html
+++ b/index.html
@@ -1,52 +1,95 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My Electronic Store</title>
-  <link rel="stylesheet" href="style.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Pro Business Store</title>
+<style>
+body{
+    margin:0;
+    font-family:Arial, sans-serif;
+    background:#f5f5f5;
+}
+header{
+    background:#111;
+    color:white;
+    padding:15px;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+}
+header h1{margin:0;}
+nav button{
+    margin-left:10px;
+    padding:8px 12px;
+    border:none;
+    cursor:pointer;
+}
+.container{
+    padding:20px;
+}
+.products{
+    display:grid;
+    grid-template-columns:repeat(auto-fit,minmax(220px,1fr));
+    gap:20px;
+}
+.card{
+    background:white;
+    padding:15px;
+    border-radius:8px;
+    box-shadow:0 4px 10px rgba(0,0,0,0.1);
+}
+.card img{
+    width:100%;
+    height:180px;
+    object-fit:cover;
+}
+button{
+    background:#28a745;
+    color:white;
+    border:none;
+    padding:8px 12px;
+    cursor:pointer;
+    border-radius:5px;
+}
+button:hover{
+    opacity:0.9;
+}
+.cart{
+    position:fixed;
+    right:0;
+    top:0;
+    width:300px;
+    height:100%;
+    background:white;
+    padding:15px;
+    overflow:auto;
+    box-shadow:-2px 0 10px rgba(0,0,0,0.2);
+}
+input{
+    padding:8px;
+    width:100%;
+    margin-bottom:10px;
+}
+.hidden{display:none;}
+.admin-panel{
+    background:white;
+    padding:15px;
+    margin-top:20px;
+}
+</style>
 </head>
 <body>
 
 <header>
-  <h1>My Electronic Store</h1>
-  <nav>
-    <a href="#">Home</a>
-    <a href="#products">Products</a>
-    <a href="#contact">Contact</a>
-  </nav>
+    <h1>Pro Business Store</h1>
+    <div>
+        <button onclick="showLogin()">Login</button>
+        <button onclick="showRegister()">Register</button>
+        <button onclick="toggleCart()">Cart 🛒</button>
+    </div>
 </header>
 
-<section id="products" class="products">
-
-  <div class="product">
-    <img src="images/phone.jpg">
-    <h3>Smartphone</h3>
-    <p>$299</p>
-    <a class="buy" href="https://wa.me/971XXXXXXXXX">Buy Now</a>
-  </div>
-
-  <div class="product">
-    <img src="images/laptop.jpg">
-    <h3>Laptop</h3>
-    <p>$799</p>
-    <a class="buy" href="https://wa.me/971XXXXXXXXX">Buy Now</a>
-  </div>
-
-  <div class="product">
-    <img src="images/headphones.jpg">
-    <h3>Headphones</h3>
-    <p>$99</p>
-    <a class="buy" href="https://wa.me/971XXXXXXXXX">Buy Now</a>
-  </div>
-
-</section>
-
-<footer id="contact">
-  <p>Contact us on WhatsApp</p>
-</footer>
-
-</body>
-</html>
-
-
+<div class="container">
+    <div id="product-list" class="products"></div>
 
